# MGMM_ICRA2025

./: CMakeCache.txt  CMakeLists.txt  GenerateResults.py  LICENSE  Makefile  README.md  build.ninja  build.sh  clean.sh  cmake_install.cmake
LKHs/: LKHlog.txt  LKHprob.txt  LKHsol.txt
data/: ParamsCar.txt  ParamsDromosForCar.txt  ParamsGeneral.txt  ParamsGenerateInstances.txt  ParamsGraphics2D.txt  ParamsPRM_2D.txt  ParamsSceneCurvesForCar.txt  ParamsSceneCurvesForCar_tmp.txt  ParamsSceneStorageForCar.txt
data/Results/: DromosCurvesForCar_2.txt  DromosCurvesForCar_3.txt  DromosCurvesForCar_4.txt  DromosMazeForCar_2.txt  DromosMazeForCar_3.txt  DromosMazeForCar_4.txt  DromosRandomForCar_2.txt  DromosRandomForCar_3.txt  DromosRandomForCar_4.txt  DromosStorageForCar_2.txt  DromosStorageForCar_3.txt  DromosStorageForCar_4.txt
data/goalPosition/: CurvesPoints_2.txt  CurvesPoints_3.txt  CurvesPoints_4.txt  CurvesPoints_5.txt  MazePoints_2.txt  MazePoints_3.txt  MazePoints_4.txt  MazePoints_5.txt  RandomPoints_2.txt  RandomPoints_3.txt  RandomPoints_4.txt  RandomPoints_5.txt  StoragePoints_2.txt  StoragePoints_3.txt  StoragePoints_4.txt  StoragePoints_5.txt
gdata/textures/: 2.ppm
pythonScripts/: vis.py  visualize.py
pythonScripts/utils/: figures.py  util.py
src/Components/: Car.cpp  Car.hpp  Component.hpp  Constants.hpp  Decomposition.cpp  Decomposition.hpp  DecompositionEdge.hpp  DecompositionGeometric.cpp  DecompositionGeometric.hpp  DecompositionGrid.cpp  DecompositionPRM.cpp  DecompositionPRM.hpp  DecompositionTriangles.cpp  Group.hpp  GroupKey.hpp  GroupKeyTour.hpp  GroupKeyUnreachedGoals.cpp  GroupSelectorMaxWeight.cpp  Groups.hpp  MPTreeVertex.hpp  Problem.cpp  Problem.hpp  Region.hpp  Region2D.hpp  RegionGeometric.hpp  RegionPolygon2D.hpp  Scene.cpp  Scene.hpp  Scene2D.cpp  Scene2D.hpp  Scene3D.cpp  Scene3D.hpp  Simulator.cpp  Simulator.hpp  SimulatorBlimp.cpp  SimulatorBlimp.hpp  SimulatorCarTrailers.cpp  SimulatorCarTrailers.hpp  SimulatorMotionEqs.cpp  SimulatorMotionEqs.hpp  (+8 more)
src/CreateScenes/: Constants.hpp  CreateScene.cpp  CreateScene.hpp  CreateSceneCurves.cpp  CreateSceneMaze.cpp  CreateSceneRandom.cpp  CreateSceneRooms.cpp  Fence.cpp  Fence.hpp  Maze.cpp  Maze.hpp
src/Planners/: Constants.hpp  Dromos.cpp  Dromos.hpp  Juve.cpp  MP.hpp  MPTree.cpp  MPTree.hpp  Milan.cpp  Milan.hpp  RRT.cpp  Sequential.cpp  Sequential.hpp
src/Programs/: CleanResults.cpp  Constants.hpp  GManagerDecomposition.cpp  GManagerGoals.cpp  GManagerGoals.hpp  GManagerMP.cpp  GManagerMP.hpp  GManagerSimulator.cpp  GRunMP.cpp  GenerateInstances.cpp  ProcessResults.cpp  RunDistance.cpp  RunPlanner.cpp  Runner.cpp  Setup.cpp  Setup.hpp  TestPredictLKH.cpp
src/Utils/: Algebra.hpp  Colormap.cpp  Colormap.hpp  Constants.hpp  DLHandler.cpp  DLHandler.hpp  Definitions.hpp  GCamera.cpp  GDraw.cpp  GDraw.hpp  GManager.cpp  GManager.hpp  GManagerComponent.hpp  GMaterial.hpp  GText3D.cpp  Grid.cpp  Grid.hpp  Misc.hpp  PIDController.hpp  Params.cpp  Params.hpp  Polygon2D.cpp  Polygon2D.hpp  PseudoRandom.cpp  Radix.hpp  Reader.cpp  Reader.hpp  Stats.hpp  Tree.hpp  TreeVertex.hpp  (+2 more)
(+754291 files in other folders)
